--- a/index.html
+++ b/index.html
@@ -32,9 +32,7 @@
                 <li><a href="#features">Features</a></li>
                 <li><a href="#documents">Documents</a></li>
                 <li><a href="#team">Team</a></li>
-                <li><a href="#demo">Senior Design Demo</a></li>
-                <li><a href="#cdr-presentation">Critical Design Review</a></li>
-                <li><a href="#midterm-demo">Midterm Progress</a></li>
+                <li><a href="#demo">Project Demos</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
@@ -210,6 +208,12 @@
                         <p>Complete documentation of first semester progress and achievements.</p>
                         <span class="status-badge complete">Complete</span>
                     </a>
+                    <a href="documents/8pgPaper.pdf" target="_blank" class="document-card">
+                        <i class="fas fa-file-pdf"></i>
+                        <h4>Conference Paper</h4>
+                        <p>Academic paper detailing our research and implementation methodology.</p>
+                        <span class="status-badge complete">Complete</span>
+                    </a>
                     <div class="document-card coming-soon">
                         <i class="fas fa-file-pdf"></i>
                         <h4>Senior Design 2 Final Report</h4>
@@ -265,24 +269,24 @@
                     <div class="presentation-group">
                         <h4 class="group-title">Final Presentation</h4>
                         <div class="presentation-items">
-                            <div class="document-card coming-soon">
+                            <a href="https://www.youtube.com/embed/B0OHhx-XmFs" target="_blank" class="document-card video-card">
                                 <i class="fas fa-video"></i>
                                 <h4>Final Presentation Video</h4>
-                                <p>Watch our final project presentation.</p>
-                                <span class="status-badge pending">Coming Soon</span>
-                            </div>
-                            <div class="document-card coming-soon">
+                                <p>Watch our final project presentation and comprehensive overview.</p>
+                                <span class="status-badge complete">Complete</span>
+                            </a>
+                            <a href="documents/finalPres.pdf" target="_blank" class="document-card">
                                 <i class="fas fa-file-powerpoint"></i>
                                 <h4>Final Presentation Slides</h4>
                                 <p>Slides from our final project presentation.</p>
-                                <span class="status-badge pending">Coming Soon</span>
-                            </div>
-                            <div class="document-card coming-soon">
+                                <span class="status-badge complete">Complete</span>
+                            </a>
+                            <a href="https://www.youtube.com/embed/RiVXf_K2XwQ" target="_blank" class="document-card video-card">
                                 <i class="fas fa-video"></i>
                                 <h4>Final Demonstration Video</h4>
-                                <p>Watch our complete system demonstration.</p>
-                                <span class="status-badge pending">Coming Soon</span>
-                            </div>
+                                <p>Watch our complete system demonstration and implementation results.</p>
+                                <span class="status-badge complete">Complete</span>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -387,7 +391,7 @@
                             <li><i class="fas fa-check-circle"></i> Node: Camera / IR Sensors</li>
                         </ul>
                         <div class="social-links">
-                            <a href="https://www.linkedin.com/in/dylan-myers/" target="_blank" class="linkedin-link">
+                            <a href="https://www.linkedin.com/in/dylan-myers-1280a5228/" target="_blank" class="linkedin-link">
                                 <i class="fab fa-linkedin"></i> Connect on LinkedIn
                             </a>
                         </div>
@@ -491,6 +495,78 @@
                     <li><i class="fas fa-microchip"></i> Hardware implementation progress</li>
                     <li><i class="fas fa-brain"></i> AI detection capabilities</li>
                     <li><i class="fas fa-tasks"></i> System integration overview</li>
+                </ul>
+            </div>
+        </section>
+
+        <!-- Final Presentation Section -->
+        <section id="final-presentation">
+            <h2>SD2 - Final Presentation</h2>
+            <div class="video-container">
+                <iframe 
+                    id="final-presentation-video"
+                    src="https://www.youtube.com/embed/B0OHhx-XmFs"
+                    title="SecureScape Final Presentation"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen>
+                </iframe>
+            </div>
+            <div class="demo-description">
+                <h3>SD2 - Final Project Overview</h3>
+                <ul class="demo-highlights">
+                    <li><i class="fas fa-project-diagram"></i> Complete System Architecture</li>
+                    <li><i class="fas fa-chart-line"></i> Performance Results</li>
+                    <li><i class="fas fa-check-circle"></i> Project Achievements</li>
+                    <li><i class="fas fa-forward"></i> Future Development Plans</li>
+                </ul>
+            </div>
+        </section>
+
+        <!-- Final Demo Section -->
+        <section id="final-demo">
+            <h2>SD2 - Final Demo</h2>
+            <div class="video-container">
+                <iframe 
+                    id="final-demo-video"
+                    src="https://www.youtube.com/embed/RiVXf_K2XwQ"
+                    title="SecureScape Final Demo"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen>
+                </iframe>
+            </div>
+            <div class="demo-description">
+                <h3>SD2 - Complete System Demonstration</h3>
+                <ul class="demo-highlights">
+                    <li><i class="fas fa-cogs"></i> Full System Integration</li>
+                    <li><i class="fas fa-mobile-alt"></i> Mobile App Features</li>
+                    <li><i class="fas fa-camera"></i> Node Detection System</li>
+                    <li><i class="fas fa-network-wired"></i> Communication Network</li>
+                </ul>
+            </div>
+        </section>
+
+        <!-- Showcase Demo Section -->
+        <section id="showcase-demo">
+            <h2>SD2 - Showcase Demo</h2>
+            <div class="video-container">
+                <iframe 
+                    id="showcase-demo-video"
+                    src="https://www.youtube.com/embed/vEHdRqrL-1E"
+                    title="SecureScape Showcase Demo"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen>
+                </iframe>
+            </div>
+            <div class="demo-description">
+                <h3>SD2 - Project Showcase</h3>
+                <ul class="demo-highlights">
+                    <li><i class="fas fa-star"></i>Motivations</li>
+                    <li><i class="fas fa-microchip"></i>Project Overview</li>
+                    <li><i class="fas fa-tools"></i> System Capabilities</li>
+                    <li><i class="fas fa-video"></i> Project Demos</li>
                 </ul>
             </div>
         </section>
