After Phillip Changes.

--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                     <div class="presentation-group">
                         <h4 class="group-title">Final Presentation</h4>
                         <div class="presentation-items">
-                            <a href="https://www.youtube.com/embed/B0OHhx-XmFs" target="_blank" class="document-card video-card">
+                            <a href="https://www.youtube.com/embed/fDwfUKgb1vk" target="_blank" class="document-card video-card">
                                 <i class="fas fa-video"></i>
                                 <h4>Final Presentation Video</h4>
                                 <p>Watch our final project presentation and comprehensive overview.</p>
@@ -281,7 +281,7 @@
                                 <p>Slides from our final project presentation.</p>
                                 <span class="status-badge complete">Complete</span>
                             </a>
-                            <a href="https://www.youtube.com/embed/RiVXf_K2XwQ" target="_blank" class="document-card video-card">
+                            <a href="https://www.youtube.com/embed/00PXKWyzCL0" target="_blank" class="document-card video-card">
                                 <i class="fas fa-video"></i>
                                 <h4>Final Demonstration Video</h4>
                                 <p>Watch our complete system demonstration and implementation results.</p>
@@ -505,7 +505,7 @@
             <div class="video-container">
                 <iframe 
                     id="final-presentation-video"
-                    src="https://www.youtube.com/embed/B0OHhx-XmFs"
+                    src="https://www.youtube.com/embed/fDwfUKgb1vk"
                     title="SecureScape Final Presentation"
                     frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -529,7 +529,7 @@
             <div class="video-container">
                 <iframe 
                     id="final-demo-video"
-                    src="https://www.youtube.com/embed/RiVXf_K2XwQ"
+                    src="https://www.youtube.com/embed/00PXKWyzCL0"
                     title="SecureScape Final Demo"
                     frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
