Latest Update w/ Final Paper, Should be Last Update to Site.

--- a/index.html
+++ b/index.html
@@ -214,12 +214,12 @@
                         <p>Academic paper detailing our research and implementation methodology.</p>
                         <span class="status-badge complete">Complete</span>
                     </a>
-                    <div class="document-card coming-soon">
+                    <a href="documents/sd2FinalPaper.pdf" target="_blank" class="document-card">
                         <i class="fas fa-file-pdf"></i>
                         <h4>Senior Design 2 Final Report</h4>
                         <p>Comprehensive documentation of the complete project implementation and results.</p>
-                        <span class="status-badge pending">Coming Soon</span>
-                    </div>
+                        <span class="status-badge complete">Complete</span>
+                    </a>
                 </div>
             </div>
 
